Revision history for {{$dist->name}}

{{$NEXT}}

0.004     2013-05-21 14:58:55 PDT-0700 (Karen Etheridge)
          - when allowing warnings (via allow_warnings()), messages are
            emitted via note() rather than warn(), for less noisy output when
            running in a harness

0.003     2013-04-13 14:07:58 PDT-0700 (Karen Etheridge)
          - Test suite (and code) fixed to work in the presence of
            Test::Builder 1.005+ (TB2)
          - END logic fixed: now a no-warnings test is added whenever any
            tests have been run, even if there is no plan, as was originally
            intended

0.002     2013-03-14 14:47:30 PDT-0700 (Karen Etheridge)
          Releasing as non-TRIAL for greater visibility.
          - ':no_end_test' option added
          - test added showing that we play nicely with 'skip_all'

0.001-TRIAL  2013-03-09 16:56:29 PST-0800 (Karen Etheridge)
          - Initial release.
