@@ -7,7 +7,7 @@ use parent 'Exporter';
 use Test::Builder;
 use Class::Method::Modifiers ();
 
-our @EXPORT_OK = qw(allow_warnings allowing_warnings had_no_warnings);
+our @EXPORT_OK = qw(allow_warnings allowing_warnings had_no_warnings warnings);
 our %EXPORT_TAGS = ( all => \@EXPORT_OK );
 
 my $warnings_allowed;
@@ -50,6 +50,17 @@ $SIG{__WARN__} = sub {
         $forbidden_warnings_found++;
     }
 };
+
+sub warnings(&)
+{
+    my $code = shift;
+    my @warnings;
+    local $SIG{__WARN__} = sub {
+        push @warnings, shift;
+    };
+    $code->();
+    @warnings;
+}
 
 if (Test::Builder->can('done_testing'))
 {
@@ -171,6 +182,20 @@ C<allowing_warnings> call.  It is run
 automatically at the end of all tests, but can also be called manually at any
 time, as often as desired.
 
+=item * C<< warnings( { code } ) >>
+
+Given a code block, runs the block and returns a list of all the
+(not previously allowed via C<allow_warnings>) warnings issued within.  This
+lets you test for the presence of warnings that you not only would I<allow>,
+but I<must> be issued.  Testing functions are not provided; given the strings
+returned, you can test these yourself using your favourite testing functions,
+such as L<Test::More::is|Test::More> or L<Test::Deep::cmp_deeply|Test::Deep>.
+
+Warnings generated by this code block are I<NOT> propagated further. However,
+since they are returned from this function with their filename and line
+numbers intact, you can re-issue them yourself immediately after calling
+C<warnings(...)>, if desired.
+
 =back
 
 =head1 OTHER OPTIONS
@@ -209,10 +234,6 @@ by C<#perl-qa> on irc!
 
 =item * C<< allow_warnings(qr/.../) >> - allow some warnings and not others
 
-=item * C<< warning_is, warning_like etc... >> - inclusion of some
-L<Test::Warn>-like functionality for testing the content of warnings, but
-closer to a L<Test::Fatal>-like syntax
-
 =for stopwords subtest subtests
 
 =item * more sophisticated handling in subtests - if we save some state on the
@@ -245,5 +266,9 @@ I am also usually active on irc, as 'ether' at C<irc.perl.org>.
 the need for special warning testing
 
 =end :list
+
+L<Test::Warn>
+
+L<Test::Fatal>
 
 =cut
