@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - new feature: warnings { code }, for capturing the contents of
+            warnings for subsequent testing
 
 0.004     2013-05-21 14:58:55 PDT-0700 (Karen Etheridge)
           - when allowing warnings (via allow_warnings()), messages are
